# Tradingview-Optimiser

./: .env.example  .gitignore  .prettierrc  LICENCE  README.md  manifest-firefox.json  manifest.json  opt_server.py  package-lock.json  package.json  popup.html  requirements.txt  start_server.py  styles.css  tailwind.config.ts  tsconfig.json  webpack.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  ci.yml  dependabot-auto-merge.yml  extension.yml
backend/: .gitignore  README.md  __init__.py  env.example  main.py  models.py  optimizer.py  pyproject.toml  pyrightconfig.json
backend/app/: main.py  schemas.py
backend/tests/: test_main_security.py  test_models_and_optimizer.py
extension/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: manifest.json  vite-env.d.ts
scripts/: check.ps1  dev.ps1
src/: background.ts  config.ts  content.ts  manifest.chrome.json  manifest.firefox.json  popup.ts  popup.tsx  styles.css  types.ts  utils.ts
src/background/: background.js
src/components/: App.tsx  ConfigManager.jsx  ErrorBoundary.tsx  ErrorScreen.jsx  FiltersPanel.jsx  Header.jsx  LoadingScreen.jsx  LogsPanel.jsx  OptimizationPanel.jsx  ResultsPanel.jsx  SettingsPanel.jsx  StrategySelector.jsx
src/config/: dom_selectors.json
src/content/: content.js
src/extractors/: index.ts  strategy.ts  tabData.ts
src/handlers/: dateRangeHandler.ts  (+10 more)
(+112 files in other folders)
