[project]
name = "tv-optimiser-backend"
version = "0.1.0"
description = "TradingView strategy optimisation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "optuna>=4.6.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
    "optunahub>=0.4.0",
    "cmaes>=0.10.0",
    "torch>=2.9.1",
    "scipy>=1.16.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
