[project]
name = "tradingview-strategy-optimizer-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "optuna>=4.1,<5",
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
auto-sampler = [
  "optunahub>=0.3,<1",
]
sampler-gp = [
  "scipy>=1.12,<2",
]
sampler-cmaes = [
  "cmaes>=0.11,<1",
]
gpu = [
  "torch>=2.2,<3",
]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<1",
  "ruff>=0.11,<1",
  "pyright>=1.1,<2",
]
